@@ -31,6 +31,10 @@
 - Files included via the ``[include]`` section are now logged at the ``INFO``
   level instead of ``WARN``.  Patch by Daniel Hahler.
 
+- ``400 Bad Request`` is now returned if an XML-RPC request is received with
+  invalid body data.  In previous versions, ``500 Internal Server Error``
+  was returned.
+
 3.2.2 (2016-03-04)
 ------------------
 
